--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "test": "jest -c ./jest.unit.json",
     "test:watch": "jest --watch -c ./jest.unit.json",
-    "build": "webpack",
-    "dev": "webpack server",
-    "prod": "webpack --mode=production"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +23,9 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -33,10 +34,12 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
+    "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
